--- a/package.json
+++ b/package.json
@@ -1,10 +1,25 @@
 {
+  "name": "discord-beambot",
+  "version": "0.0.1",
+  "description": "A DiscordJS Beam API bot for Discord servers!",
+  "main": "bot.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/BaconHawk/Discord-BeamBot.git"
+  },
   "author": "BaconHawk",
-  "version": "v0.0.1",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/BaconHawk/Discord-BeamBot/issues"
+  },
+  "homepage": "https://github.com/BaconHawk/Discord-BeamBot#readme",
   "dependencies": {
     "discord.js": "^11.0.0",
     "request": "^2.79.0",
     "sqlite": "^2.3.0",
-    "uws": "^0.12.0"
+    "uws": "^0.13.0"
   }
 }
